Cambio de tema en index

--- a/lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html
+++ b/lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Identificación de Grupos Funcionales</title>
     <link rel="stylesheet" href="../../../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../../css/preguntas.css">
     <link rel="stylesheet" href="../../../css/styles.css">
 </head>
 <body>
