--- a/index.html
+++ b/index.html
@@ -4,26 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Química Orgánica 3D</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <header class="text-center py-4">
+    <div class="particle-background"></div> <!-- Fondo de partículas -->
+    <header class="header">
         <h1>Identificación de Grupos Funcionales en Química Orgánica</h1>
         <p>Explora los grupos funcionales con lecciones interactivas y visualización 3D.</p>
     </header>
-    <main class="container">
-        <section class="text-center my-5">
+    <main class="main-content">
+        <section class="lessons">
             <h2>Lecciones</h2>
-            <div class="row">
-                <div class="col-md-6">
-                    <a href="lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html" class="btn btn-primary my-2">Lección 1: Identificación de Grupos Funcionales</a>
-                </div>
+            <div class="lesson-card fade-in">
+                <a href="lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html">
+                    Lección 1: Identificación de Grupos Funcionales
+                </a>
             </div>
         </section>
     </main>
-    <footer class="text-center py-4">
+    <footer class="footer">
         <p>&copy; 2024 Proyecto de Química Orgánica 3D</p>
     </footer>
+    <script src="js/particles.js"></script> <!-- Archivo JS para las partículas -->
 </body>
 </html>
