Correccion del boton y zonas muertas

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <main class="main-content">
         <section class="lessons">
             <h2>Lecciones</h2>
-            <div class="lesson-card fade-in">
+            <div class="lesson-card">
                 <a href="lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html">
                     Lección 1: Identificación de Grupos Funcionales
                 </a>
