Dejar bolas para efecto a futuro

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,25 +8,29 @@
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/index.css">
 </head>
+
 <body>
-    <div class="particle-background"></div> <!-- Fondo de partículas -->
-    <header class="header">
-        <h1>Identificación de Grupos Funcionales en Química Orgánica</h1>
-        <p>Explora los grupos funcionales con lecciones interactivas y visualización 3D.</p>
-    </header>
-    <main class="main-content">
-        <section class="lessons">
-            <h2>Lecciones</h2>
-            <div class="lesson-card">
-                <a href="lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html">
-                    Lección 1: Identificación de Grupos Funcionales
-                </a>
-            </div>
-        </section>
-    </main>
-    <footer class="footer">
-        <p>&copy; 2024 Proyecto de Química Orgánica 3D</p>
-    </footer>
-    <script src="js/particles.js"></script> <!-- Archivo JS para las partículas -->
+    <!-- <canvas> -->
+        <div class="particle-background"></div> <!-- Fondo de partículas -->
+        <header class="header">
+            <h1>Identificación de Grupos Funcionales en Química Orgánica</h1>
+            <p>Explora los grupos funcionales con lecciones interactivas y visualización 3D.</p>
+        </header>
+        <main class="main-content">
+            <section class="lessons">
+                <h2>Lecciones</h2>
+                <div class="lesson-card">
+                    <a href="lecciones/leccion1/identificacion-grupos-funcionales/preguntas.html">
+                        Lección 1: Identificación de Grupos Funcionales
+                    </a>
+                </div>
+            </section>
+        </main>
+        <footer class="footer">
+            <p>&copy; 2024 Proyecto de Química Orgánica 3D</p>
+        </footer>
+        <script src="js/particles.js"></script> <!-- Archivo JS para las partículas -->
+        <!-- <script src="js/main.js"></script> Archivo JS para la interacción y visualización 3D -->
+    <!-- </canvas> -->
 </body>
 </html>
