--- a/lecciones/leccion1/identificacion-grupos-funcionales/prueb.html
+++ b/lecciones/leccion1/identificacion-grupos-funcionales/prueb.html
@@ -184,7 +184,8 @@
         const targetMolecules = [
             { formula: ["H", "H", "O"], name: "Agua (H₂O)" },
             { formula: ["C", "O", "O"], name: "Dióxido de carbono (CO₂)" },
-            { formula: ["N", "H", "H", "H"], name: "Amoníaco (NH₃)" }
+            { formula: ["N", "H", "H", "H"], name: "Amoníaco (NH₃)" },
+            { formula: ["C", "H", "H","H", "H"], name: "Metanol (CH4)" }
         ];
 
         let currentMolecule = [];
